--- a/Index.html
+++ b/Index.html
@@ -51,7 +51,7 @@
 
 <div class="Video">
     <video class="V"  controls >
-        <source  src="Video/Counter-Strike.mp4" type="video/mp4" /> 
+        <iframe  src="https://www.youtube.com/embed/NRkyy7HZMlU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </video>
     
 </div>
