--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="Css/estilos.css">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <title>Soll</title>
+        <title>Sol</title>
     </head>
 <body>
 
@@ -51,7 +51,7 @@
 
 <div class="Video">
     
-  <iframe class="V"  width="560" height="315" src="https://www.youtube.com/embed/NRkyy7HZMlU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe class="V"  width="490" height="290" src="https://www.youtube.com/embed/NRkyy7HZMlU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <source>
     
 </div>
