--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <img class="C" src="Video/Nosotros.JPG" width="380" height="500">
 
 </div>
+   
+<div class="Musica">
+    <h3>Reroducir antes de bajar</h3>
+    <audio class="S" src="Video/kina-get-you-the-moon-official-video-ft-snow.mp3" controls></audio>
+</div>
 
 <div class="Fondo"></div>
 
@@ -38,11 +43,18 @@
     </p>
 
     <p>
-        3 años ya, con muchos viajes y anecdotas juntos, siempre sumando nuevos momentos a nuestra galeria de recuerdos.
+        Amo pasar mis dias con vos, planear mi futuro con vos, planear nuestra vida juntos! Sos un ser de luz muy especial en mi vida, y a donde vaya te voy a llevar
+        sea donde se, mi vida cambio y sos incondicinal en mi dia a dia. Me enseñaste tantas cosas y me mostraste como vivir difrutando de lo que uno tiene, 
+        como yo disfruto de tu compañia, como tambien despertar juntos mirandonos con una mirada infinita, sabiendo que nos tenemos uno para el otro.  
+    </p>
+
+    <p>
+        3 años ya, con muchos viajes y anecdotas juntos, siempre sumando nuevos momentos a nuestra galeria de recuerdos. y... quien sabe... podriamos empezar una vida
+        nueva juntos, construir nuestro futuro fuera y crecer de la mano! 
         
     </p>
     <p>
-        Te prepare un video de nuestros mejores momentos espero que te guste
+        Te prepare un video de nuestros mejores momentos espero que te guste mi vida!
     </p>
 
 
